--- a/Source/Csla.Net4.6/packages.config
+++ b/Source/Csla.Net4.6/packages.config
@@ -1,9 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.Extensions.DependencyInjection" version="2.2.0" targetFramework="net461" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.2.0" targetFramework="net461" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="8.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="8.0.0" targetFramework="net461" />
   <package id="System.Configuration.ConfigurationManager" version="4.7.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net461" />
   <package id="System.Security.AccessControl" version="4.7.0" targetFramework="net461" />
   <package id="System.Security.Permissions" version="4.7.0" targetFramework="net461" />
   <package id="System.Security.Principal.Windows" version="4.7.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net461" />
 </packages>
